RESOLVED FIXED 104670
[GTK][AC] GraphicsLayers are not shown on the viewport
https://bugs.webkit.org/show_bug.cgi?id=104670
Summary [GTK][AC] GraphicsLayers are not shown on the viewport
Joone Hur
Reported 2012-12-11 06:44:42 PST
GraphicsLayers are not shown on the viewport because we don't resize and show the GtkClutterEmbed yet.
Attachments
Patch (5.56 KB, patch)
2012-12-11 16:58 PST, Joone Hur
no flags
Patch (5.34 KB, patch)
2012-12-12 03:13 PST, Joone Hur
no flags
Joone Hur
Comment 1 2012-12-11 16:58:50 PST
Gustavo Noronha (kov)
Comment 2 2012-12-12 01:32:17 PST
Comment on attachment 178922 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=178922&action=review LGTM, except for the duplicate timer scheduling. > Source/WebKit/gtk/WebCoreSupport/AcceleratedCompositingContextClutter.cpp:59 > - return false; > + return true; This is what we need to implement to render the page contents, right? > Source/WebKit/gtk/WebCoreSupport/AcceleratedCompositingContextClutter.cpp:93 > + scheduleLayerFlush(); > + m_layerFlushTimerCallbackId = g_timeout_add_full(GDK_PRIORITY_EVENTS, 0, reinterpret_cast<GSourceFunc>(layerFlushTimerFiredCallback), this, 0); You're scheduling the flush twice here, gotta remove the g_timeout_add_full call. > Source/WebKit/gtk/WebCoreSupport/AcceleratedCompositingContextClutter.cpp:132 > - return FALSE; > + return false; this returns a gboolean, so I'd keep FALSE here
Joone Hur
Comment 3 2012-12-12 03:03:45 PST
Comment on attachment 178922 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=178922&action=review >> Source/WebKit/gtk/WebCoreSupport/AcceleratedCompositingContextClutter.cpp:59 >> + return true; > > This is what we need to implement to render the page contents, right? Yes, it seems to paint the main content on the root layer. >> Source/WebKit/gtk/WebCoreSupport/AcceleratedCompositingContextClutter.cpp:93 >> + m_layerFlushTimerCallbackId = g_timeout_add_full(GDK_PRIORITY_EVENTS, 0, reinterpret_cast<GSourceFunc>(layerFlushTimerFiredCallback), this, 0); > > You're scheduling the flush twice here, gotta remove the g_timeout_add_full call. Yes, I will remove it. >> Source/WebKit/gtk/WebCoreSupport/AcceleratedCompositingContextClutter.cpp:132 >> + return false; > > this returns a gboolean, so I'd keep FALSE here Ok.
Joone Hur
Comment 4 2012-12-12 03:13:45 PST
WebKit Review Bot
Comment 5 2012-12-12 03:35:46 PST
Comment on attachment 179012 [details] Patch Clearing flags on attachment: 179012 Committed r137447: <http://trac.webkit.org/changeset/137447>
Gustavo Noronha (kov)
Comment 6 2013-01-14 10:46:09 PST
Comment on attachment 178922 [details] Patch Clearing flag for committed patch.
Note You need to log in before you can comment on or make changes to this bug.