[GTK][AC] GraphicsLayers are not shown on the viewport https://bugs.webkit.org/show_bug.cgi?id=104670

Reviewed by Gustavo Noronha Silva.

GraphicsLayers are not shown on the viewport because the container(GtkClutterEmbed)
is not resized and shown, so this patch allows it to fit to the viewport.

* WebCoreSupport/AcceleratedCompositingContext.h:
* WebCoreSupport/AcceleratedCompositingContextClutter.cpp:
(WebKit::AcceleratedCompositingContext::renderLayersToWindow):
(WebKit::AcceleratedCompositingContext::setRootCompositingLayer):
(WebKit::AcceleratedCompositingContext::resizeRootLayer):
(WebKit::AcceleratedCompositingContext::layerFlushTimerFiredCallback):
(WebKit::AcceleratedCompositingContext::scheduleLayerFlush):


Canonical link: https://commits.webkit.org/123002@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137447 268f45cc-cd09-0410-ab3c-d52691b4dbfc